src/objects/CreditMemoItem__c.object
<CustomObject>
    <description>Line items on credit memos.</description>
    <fields>
        <fullName>AmountWithoutTax__c</fullName>
        <label>Amount Without Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppliedToOthersAmount__c</fullName>
        <label>Applied To Others Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BeAppliedByOthersAmount__c</fullName>
        <label>Be Applied By Others Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargeDate__c</fullName>
        <label>Charge Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>The date when the invoice was created in the DAZN system.</description>
        <label>DAZN Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreditMemo__c</fullName>
        <label>Credit Memo</label>
        <referenceTo>CreditMemo__c</referenceTo>
        <relationshipLabel>Credit Memo Items</relationshipLabel>
        <relationshipName>Credit_Memo_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the DAZN object ID, and is used as external ID for data synchronization between Salesforce and DAZN.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field holds the DAZN object ID, and is used as external ID for data synchronization between Salesforce and DAZN.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InvoiceItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Item</label>
        <referenceTo>InvoiceItem__c</referenceTo>
        <relationshipLabel>Credit Memo Items</relationshipLabel>
        <relationshipName>Credit_Memo_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProcessingType__c</fullName>
        <label>Processing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceEndDate__c</fullName>
        <description>The service period end date of this memo.</description>
        <inlineHelpText>The service period end date of this memo.</inlineHelpText>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceStartDate__c</fullName>
        <description>The service period start date of this memo.</description>
        <inlineHelpText>The service period start date of this memo.</inlineHelpText>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sku__c</fullName>
        <label>SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionId__c</fullName>
        <label>Subscription Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxAmount__c</fullName>
        <description>The total tax amount of this memo.</description>
        <inlineHelpText>The total tax amount of this memo.</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxCodeName__c</fullName>
        <label>Tax Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxExemptAmount__c</fullName>
        <label>Tax Exempt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxMode__c</fullName>
        <label>Tax Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitOfMeasure__c</fullName>
        <label>Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <description>The date when the invoice was updated in the DAZN system.</description>
        <label>DAZN Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>DAZN Credit Memo Item</label>
    <nameField>
        <label>Credit Memo Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DAZN Credit Memo Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>